--- a/Homeworks/Homework #2/HW2.tex
+++ b/Homeworks/Homework #2/HW2.tex
@@ -217,7 +217,8 @@ Hence, $H$ abelian $\implies G$ abelian, and we get $G$ abelian $\iff H$ abelian
 
 \end{proof}
 
-\item Show that for any $g \in G$, $|g| = |\varphi(g)|$. [Show $g^n = 1$ if and only if $\varphi(g)^n = 1$.]
+\item Show that for any $g \in G$, $|g| = |\varphi(g)|$. [Show $g^n = 1$ if and only if $\varphi(g)^n = 1$.
+
 \begin{proof}
 Suppose $g^n = 1$.\\
 
