--- a/Course Portfolio/Course Summary/course_summary.tex
+++ b/Course Portfolio/Course Summary/course_summary.tex
@@ -536,8 +536,167 @@ The following proposition and theorem provide us with useful tools for working w
 
 Let $\varphi: K \to \text{Aut}(H)$ be the homomorphism defined by mapping $k \in K$ to the automorphism of left conjugation by $k$ on $H$. Then $HK \cong H \rtimes K$. In particular, if $G = HK$ with $H$ and $K$ satisfying $(1)$ and $(2)$, then $G$ is the semidirect product of $H$ and $K$.
 
-\subsection{Rings and Ideals}
+\subsection{Rings}
 
+We now extend our study of groups to a new algebraic structure: rings. Rings are a central theme throughout many fields of algebra which include many of the same notions that we studied in groups with a few key differences. Whereas groups consisted of a set with one binary operation, rings are a set with two binary operations. Moreover, these binary operations must interact with each other in some sense, otherwise we would consider them as two different groups. We can formalize this notion with the following definition \cite[\S 7.1, p. 223]{dummit}:
+
+\par
+\textbf{Definition.}
+\begin{enumerate}
+\item A \textit{ring} $R$ is a set together with two binary operations $+$ and $\times$ (called addition and multiplication) satisfying the following axioms:
+\begin{enumerate}[label=(\roman*)]
+
+\item $(R, +)$ is an \textit{abelian} group
+
+\item $\times$ is associative: $(a \times b) \times c = a \times (b \times c)$ for all $a, b, c \in R$
+
+\item the \textit{distributive laws} hold in $R$: for all $a, b, c \in R$
+\begin{align*}
+(a + b) \times c = (a \times c) + (b \times c) \text{  and  } a \times (b + c) = (a \times b) + (a \times c)
+\end{align*}
+\end{enumerate}
+
+\item The ring $R$ us \textit{commutative} if multiplication is commutative.
+
+\item The ring $R$ is said to have an \textit{identity} (or \textit{contain a} 1) if there is an element $1 \in R$ with
+\begin{align*}
+1 \times a = a \times 1 = a \text{  for all } a \in R
+\end{align*}
+\end{enumerate}
+
+Rings can be further classified based off certain attributes, such as the following \cite[\S 7.1, p. 224]{dummit}:
+
+\par
+\textbf{Definition.} A ring $R$ with identity $1$, where $1 \neq 0$, is called a \textit{division ring} (or \textit{skew field}) if every nonzero element $a \in R$ has a multiplicative inverse, i.e., there exists $b \in R$ such that $ab = ba = 1$. A commutative division ring is called a \textit{field}.
+
+\par
+Commutative division rings (or fields) are extremely common throughout undergrad mathematics. For example, the real numbers and the integers equipped with our usual notions of multiplication and addition are two examples of fields.
+
+\par
+The following proposition gives us some properties of rings \cite[\S 7.1, p. 236]{dummit}:
+
+\par
+\textbf{Proposition 1.} Let $R$ be a ring. Then
+\begin{enumerate}
+\item $0a = a0 = 0$ for all $a \in R$
+\item $(-a)b = a(-b) = -(ab)$ for all $a, b \in R$ (recall $-a$ is the additive inverse of $a$)
+\item $(-a)(-b) = ab$ for all $a, b \in R$
+\item if $R$ has an identity $1$, then the identity is unique and $-a = (-1)a$
+\end{enumerate}
+
+Hence, we can see that rings retain some the usual operations that we have seen for addition and multiplication in our more typical settings, such as the real numbers. 
+
+\par
+\textbf{Definition.} Let $R$ be a ring.
+\begin{enumerate}
+\item A nonzero element $a$ of $R$ is called a \textit{zero divisor} if there is a nonzero element $b$ in $R$ such that either $ab = 0$ or $ba = 0$
+
+\item Assume $R$ has an identity $1 \neq 0$. An element $u$ of $R$ is called a \textit{unit} in $R$ if there is some $v$ in $R$ such that $uv = vu = 1$. The set of units in $R$ is denoted $R^{\times}$. 
+\end{enumerate}
+
+The units in $R$ form a group under multiplication. Rings that share certain characteristics with $\ZZ$ are defined as follows:
+
+\par
+\textbf{Definition.} A commutative ring with identity $1 \neq 0$ is called an \textit{integral domain} if it has no zero divisors.
+
+\par
+\textbf{Proposition 2.} Assume $a, b$ and $c$ are elements of any ring with $a$ not a zero divisior. If $ab = ac$, then either $a = 0$ or $b = c$ (i.e., if $a \neq 0$ we can cancel the $a$'s). In particular, if $a, b, c$ are any elements in an integral domain and $ab = ac$, then either $a = 0$ or $b = c$.
+
+\par
+\textbf{Corollary 3.} Any finite integral domain is a field.
+
+\par
+Now, similarly to groups and subgroups, we can define a subset of a ring which retains the structure of the parent ring. We can make this notion formal through the following definition \cite[\S 7.1, p. 228]{dummit}:
+
+\par
+\textbf{Definition.} A \textit{subring} of the ring $R$ is a subgroup of $R$ that is closed under multiplication.
+
+\subsection{Ring Homomorphisms and Quotient Rings}
+
+Ring homomorphisms are very similar in concept to group homomorphisms. However, in the case of rings, homomorphisms must retain both the additive and multiplicative structure of the domain ring. We can see this in the following definition \cite[\S 7.3, p. 239]{dummit}:
+
+\par
+\textbf{Definition.} Let $R$ and $S$ be rings.
+\begin{enumerate}
+\item A \textit{ring homomorphism} is a map $\varphi: R \to S$ satisfying
+\begin{enumerate}[label=(\roman*)]
+
+\item $\varphi(a + b) = \varphi(a) + \varphi(b)$ for all $a, b \in R$ (so $\varphi$ is a group homomorphism on the additive groups) 
+
+\item $\varphi(ab) = \varphi(a)\varphi(b)$ for all $a, b \in R$
+\end{enumerate}
+
+\item The \textit{kernel} of the ring homomorphism $\varphi$, denoted $\text{ker}\phi$, is the set of elements of $R$ that map to $0$ in $S$ (i.e., the kernel of $\varphi$ viewed as a homomorphism of additive groups).
+
+\item A bijective ring homomorphism is called an \textit{isomorphism}.
+
+\end{enumerate}
+
+Again, similarly to the case of group homomorphisms, we can relate the image of a ring homomorphism to its codomain \cite[\S 7.3, p. 239]{dummit}:
+\par
+\textbf{Proposition 5.} Let $R$ and $S$ be rings and let $\varphi: R \to S$ be a homomorphism.
+\begin{enumerate}
+\item The image of $\varphi$ is a subring of $S$.
+
+\item The kernel of $\varphi$ is a subring of $R$. Furthermore, if $\alpha \in \text{ker}\varphi$ then $r\alpha$ and $\alpha r \in \text{ker} \varphi$ for every $r \in R$, i.e., $\text{ker} \varphi$ is closed under multiplication by elements from $R$.
+
+\end{enumerate}
+
+Naturally, we can wonder if an analogue of normal subgroups (and by extension quotient groups) exists in the ring setting. The concept related to normal subgroups is called an ideal and is conceptualized as a subset of a ring $R$ which is closed under multiplication on the left and on the right by elements from $R$. Making this definition formal yields \cite[\S 7.3, p. 242]{dummit}:
+
+\par
+\textbf{Definition.} Let $R$ be a ring, let $I$ be a subset of $R$ and let $r \in R$.
+\begin{enumerate}
+\item $rI = \{ra \ | \ a \in I\} \text{  and  } Ir = \{ar \ | \ a \in I\}$
+
+\item A subset $I$ of $R$ is a \textit{left ideal} of $R$ if
+\begin{enumerate}[label=(\roman*)]
+
+\item $I$ is a subring of $R$
+
+\item $I$ is closed under left multiplication by elements from $R$, i.e., $rI \subset I$ for all $r \in R$
+
+Similarly, $I$ is a \textit{right ideal} if (i) holds and in place of (ii) one has
+\item $I$ is closed under right multiplication by elements from $R$, i.e., $Ir \subset I$ for all $r \in R$
+\end{enumerate}
+
+\item A subset $I$ that is both a left ideal and a right ideal is called an \textit{ideal} (or, for added emphasis, a \textit{two-sided ideal}) of $R$
+\end{enumerate}
+
+Now we will define operations on quotient rings \cite[\S 7.3, p. 242-243]{dummit}:
+
+\par
+\textbf{Proposition 6.} Let $R$ be a ring and let $I$ be an ideal of $R$. Then the (additive) quotient group $R/I$ is a ring under the binary operation:
+\begin{align*}
+(r+I) + (s+I) = (r+s) + I \text{  and  } (r+I) \times (s+I) = (rs) + I
+\end{align*}
+
+for all $r, s \in R$. Conversely, if $I$ is any subgroup such that the above operations are well defined, then $I$ is an ideal of $R$.
+
+\par
+\textbf{Definition:} When $I$ is an ideal of $R$, the ring $R/I$ with the operations in the previous proposition is called the \textit{quotient ring} of $R$ by $I$.
+
+\par
+Thus, we now have a formal notion of normal subgroups and quotient groups in the ring context. In keeping with the theme of extending group concepts to rings, we can now discuss the Isomorphism Theorems as they apply to rings \cite[\S 7.3, p. 243, 246]{dummit}:
+
+\textbf{Theorem 7 \& 8}
+\begin{enumerate}
+\item \textit{(The First Isomorphism Theorem for Rings)} If $\varphi: R \to S$ is a homomorphism of rings, then the kernel of $\varphi$ is an ideal of $R$, the image of $\varphi$ is a subring of $S$ and $R/\text{ker}\varphi$ is isomorphic as a ring to $\varphi(R)$.
+\item If $I$ is any ideal of $R$, then the map
+\begin{align*}
+R \to R/I \text{   defined by   } r \mapsto r + I
+\end{align*}
+
+is a surjective ring homomorphism with kernel $I$ (this homomorphism is called the \textit{natural projection} of $R$ onto $R/I$). Thus every ideal is the kernel of a ring homomorphism and vice versa.
+
+\item \textit{(The Second Isomorphism Theorem for Rings)} Let $A$ be a subring and let $B$ be an ideal of $R$. Then $A + B = \{a+b \ | \ a \in A, b \in B\}$ is a subring of $R$, $A \cap B$ is an ideal of $A$ and $(A+B)/B \cong A/(A \cap B)$
+
+\item \textit{(The Third Isomorphism Theorem for Rings)} Let $I$ and $J$ be ideals of $R$ with $I \subset J$. Then $J/I$ is an ideal of $R/I$ and $(R/I)/(J/I) \cong R/J$.
+
+\item \textit{(The Fourth or Lattice Isomorphism Theorem for Rings)} Let $I$ be an ideal of $R$. The correspondence $A \leftrightarrow A/I$ is an inclusion preserving bijection between the set of subrings $A$ of $R$ that contain $I$ and the set of subrings of $R/I$. Furthermore, $A$ (a subring containing $I$) is an ideal of $R$ if and only if $A/I$ is an ideal of $R/I$.
+\end{enumerate}
+
+\subsection{Properties of Ideals}
 
 \subsection{Euclidean Domains and Principal Ideal Domains}
 
